--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//unpkg.zhimg.com/docsify/lib/themes/vue.css">
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/vue.css">
   <!-- <link rel="stylesheet" href="//unpkg.zhimg.com/docsify/themes/buble.css"> -->
   <!-- </head> -->
 </head>
@@ -88,6 +88,7 @@
     }
   </style>
   <script src="//unpkg.zhimg.com/docsify/lib/docsify.min.js"></script>
+  <script src="//unpkg.zhimg.com/prismjs@1.22.0/components/prism-java.js"></script>
   <!-- <script src="//unpkg.zhimg.com/docsify/lib/plugins/search.min.js"></script> -->
   <script src="//unpkg.zhimg.com/docsify/lib/plugins/ga.min.js"></script>
   <script src="//unpkg.zhimg.com/prismjs/components/prism-bash.min.js"></script>
